<resources>
    <string name="app_name">StoryApp1</string>
    <string name="storyApp1">Story App 1</string>
    <string name="storyUser">Story User</string>
    <string name="android_intermediate">Android Intermediate</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Add Description</string>
    <string name="desc_error_msg">Description must be filled!</string>
    <string name="choosePicture">Choose a Picture</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="name_warn_msg">Name Can\'t be Empty!</string>
    <string name="email">Email</string>
    <string name="email_warn_msg">Email must be filled!</string>
    <string name="invalid_email">Your email format is wrong</string>
    <string name="password">Password</string>
    <string name="password_warn_msg">Password must be filled!</string>
    <string name="password_error_msg">Password minimum 6 characters</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="loginFail">Login Failed</string>
    <string name="register">Register</string>
    <string name="registerSuccessful">Register Successful</string>
    <string name="registerFail">Register Failed</string>
    <string name="uploadSuccessful">Upload Successful</string>
    <string name="uploadFail">Upload Failed</string>
    <string name="loadSuccessful">Load Successful</string>
    <string name="loadFail">Load Failed</string>
    <string name="dont_have_account">Don\'t Have Account? Click Register Here!</string>
    <string name="imgDetailStory">Image Detail Story</string>
    <string name="username">Username</string>
    <string name="userDesc">User Description</string>
    <string name="usernameDetail">Username Detail</string>
    <string name="userDescDetail">User Description Detail</string>
</resources>