<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    tools:context=".Detail.DetailActivityStory">

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imgDetailStory"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/userNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/usernameDetail"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetail" />

    <TextView
        android:id="@+id/userDescDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/userDescDetail"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>