<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    tools:context=".Story.AddStoryActivity">

    <ImageView
        android:id="@+id/imgAddPreview"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/ic_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imgAddStory" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black_soft"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAddPreview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_soft"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAddPreview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAddPreview">

        <com.belajar.android.storyapp1.CustomView.DescEditText
            android:id="@+id/et_descriptionStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>